Fixed scoreboard rendering and updated design

--- a/public/register.html
+++ b/public/register.html
@@ -201,7 +201,7 @@
     <button id="startCameraBtn" type="button">Enable camera</button>
 
     <video id="camPreview" autoplay playsinline muted></video>
-    <p class="hint">If your nickname is missing, ping the broadcast lead.</p>
+  <p class="hint">If you don't see yourself in the list, join the game server.</p>
   <p class="status" id="status">Requesting camera access...</p>
   </div>
 
