--- a/public/t-side-gb-27.html
+++ b/public/t-side-gb-27.html
@@ -138,6 +138,15 @@
       display: none;
     }
 
+    .slot .fallback {
+      position: absolute;
+      inset: 0;
+      width: 100%;
+      height: 100%;
+      object-fit: cover;
+      display: none;
+    }
+
     .slot .placeholder {
       position: absolute;
       inset: 0;
@@ -194,6 +203,7 @@
       }
     }
   </style>
+  <script src="js/webrtc-support.js"></script>
 </head>
 <body data-team="T">
   <div class="stage">
