Fixed scoreboard rendering and updated design

--- a/public/main-gb-full-27.html
+++ b/public/main-gb-full-27.html
@@ -112,9 +112,8 @@
 
       const knownPublishers = new Set();
       const sessions = new Map();
-    const retryCounts = new Map();
-    const fallbackNicknames = new Set();
-    const WEBRTC_RETRY_LIMIT = 3;
+  const retryCounts = new Map();
+  const fallbackNicknames = new Set();
 
       let desiredFocus = null;
   let displayedStream = null;
@@ -372,7 +371,7 @@
         }
       }
 
-      function cleanupSession(nickname, { notify = true } = {}) {
+      function cleanupSession(nickname, { notify = true, retainFallback = false } = {}) {
         const session = sessions.get(nickname);
         if (!session) {
           return;
@@ -401,8 +400,12 @@
           session.stream.getTracks().forEach((track) => track.stop());
         }
 
-        retryCounts.delete(nickname);
-        deactivateFallback(nickname);
+        if (!retainFallback) {
+          retryCounts.delete(nickname);
+          deactivateFallback(nickname);
+        } else {
+          fallbackNicknames.add(nickname);
+        }
 
         if (displayedNickname === nickname) {
           setDisplay(null, null);
@@ -411,7 +414,7 @@
 
       function cleanupAllSessions({ notify = false } = {}) {
         for (const nickname of Array.from(sessions.keys())) {
-          cleanupSession(nickname, { notify });
+          cleanupSession(nickname, { notify, retainFallback: false });
         }
       }
 
@@ -421,22 +424,27 @@
         }
 
         if (!knownPublishers.has(nickname)) {
-          cleanupSession(nickname, { notify: true });
+          cleanupSession(nickname, { notify: true, retainFallback: false });
           retryCounts.delete(nickname);
           deactivateFallback(nickname);
           return;
         }
 
-        cleanupSession(nickname, { notify: true });
+        const retainFallback = failed && fallbackSettings.mjpeg;
+        cleanupSession(nickname, { notify: true, retainFallback });
+
+        let attempts = retryCounts.get(nickname) || 0;
 
         if (failed) {
-          const attempts = (retryCounts.get(nickname) || 0) + 1;
+          attempts += 1;
           retryCounts.set(nickname, attempts);
-          if (fallbackSettings.mjpeg && attempts >= WEBRTC_RETRY_LIMIT) {
+          if (fallbackSettings.mjpeg) {
             activateFallback(nickname);
           }
         } else {
+          attempts = 0;
           retryCounts.set(nickname, 0);
+          deactivateFallback(nickname);
         }
 
         if (!viewerRegistered || !wsReady) {
@@ -448,9 +456,11 @@
           return;
         }
 
+        const retryDelay = failed ? Math.min(2000, 400 + attempts * 400) : 200;
+
         setTimeout(() => {
           startSession(nickname);
-        }, failed ? 400 : 200);
+        }, retryDelay);
       }
 
       async function startSession(nickname) {
