Fixed scoreboard rendering and updated design

--- a/public/main-gb-full-27.html
+++ b/public/main-gb-full-27.html
@@ -102,7 +102,11 @@
 
       const ICE_SERVERS = Array.isArray(resolvedConfig.iceServers) && resolvedConfig.iceServers.length ? resolvedConfig.iceServers : defaultIceServers;
       const fallbackSettings = resolvedConfig.fallback && typeof resolvedConfig.fallback === "object" ? resolvedConfig.fallback : {};
-      const hasWebRTC = window.WebRTC_SUPPORT?.hasWebRTCSupport?.() ?? typeof window.RTCPeerConnection === "function";
+  const params = new URLSearchParams(window.location.search || "");
+  const preferFallback = params.get("fallback") === "mjpeg";
+  const userAgent = (navigator.userAgent || "").toLowerCase();
+  const forceFallback = preferFallback || userAgent.includes("obs") || userAgent.includes("vmix");
+  const hasWebRTC = forceFallback ? false : window.WebRTC_SUPPORT?.hasWebRTCSupport?.() ?? typeof window.RTCPeerConnection === "function";
 
       let ws;
       let wsReady = false;
@@ -377,6 +381,11 @@
           return;
         }
 
+        if (session.connectTimer) {
+          clearTimeout(session.connectTimer);
+          session.connectTimer = null;
+        }
+
         sessions.delete(nickname);
 
         if (notify && wsReady) {
@@ -483,8 +492,22 @@
 
         const connectionId = createConnectionId();
         const pc = new RTCPeerConnection({ iceServers: ICE_SERVERS });
-        const session = { nickname, connectionId, pc, stream: null };
+        const session = { nickname, connectionId, pc, stream: null, connectTimer: null };
         sessions.set(nickname, session);
+
+        if (fallbackSettings.mjpeg) {
+          activateFallback(nickname);
+        }
+
+        const attempts = retryCounts.get(nickname) || 0;
+        const connectTimeout = Math.min(8000, 4000 + attempts * 500);
+        session.connectTimer = setTimeout(() => {
+          const current = sessions.get(nickname);
+          if (!current || current.connectionId !== connectionId) {
+            return;
+          }
+          restartSession(nickname, { failed: true });
+        }, connectTimeout);
 
         pc.ontrack = (event) => {
           const [stream] = event.streams || [];
@@ -497,6 +520,14 @@
             stream.getTracks().forEach((track) => track.stop());
             return;
           }
+
+          if (current.connectTimer) {
+            clearTimeout(current.connectTimer);
+            current.connectTimer = null;
+          }
+
+          retryCounts.set(nickname, 0);
+          deactivateFallback(nickname);
 
           current.stream = stream;
           if (desiredFocus === nickname) {
@@ -523,12 +554,20 @@
           }
 
           if (pc.connectionState === "connected") {
+            if (current.connectTimer) {
+              clearTimeout(current.connectTimer);
+              current.connectTimer = null;
+            }
             retryCounts.set(nickname, 0);
             deactivateFallback(nickname);
             return;
           }
 
           if (pc.connectionState === "failed" || pc.connectionState === "disconnected") {
+            if (current.connectTimer) {
+              clearTimeout(current.connectTimer);
+              current.connectTimer = null;
+            }
             restartSession(nickname, { failed: true });
           } else if (pc.connectionState === "closed") {
             cleanupSession(nickname, { notify: false });
@@ -546,6 +585,10 @@
             sdp: pc.localDescription,
           });
         } catch (error) {
+          if (session.connectTimer) {
+            clearTimeout(session.connectTimer);
+            session.connectTimer = null;
+          }
       console.error("Failed to start WebRTC session", error);
           restartSession(nickname, { failed: true });
         }
